tests/dependancies/good/module2/module3/mod.rs

pub fn exec() {
    print!("module3\n")
}

pub fn exec_top() {
    print!("module 3 for far away\n")
}