tests/dependancies/bad/private_module/module/module2.rs


pub fn exec() {
    print!("here2")
}